--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -1,11 +1,37 @@
+<!--<div class="product-reviews">-->
+  <!--<% @comments.each do |comment| %>-->
+      <!--<div class="row">-->
+        <!--<hr>-->
+        <!--<p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>-->
+        <!--&lt;!&ndash;<p><%= "Rating: #{comment.rating}/5" %></p>&ndash;&gt;-->
+        <!--<div class="rated" data-score="<%= comment.rating %>"></div>-->
+        <!--<p><%= comment.body %></p>-->
+      <!--</div>-->
+  <!--<% end %>-->
+<!--</div>-->
 
 <div class="product-reviews">
-  <% @comments.each do |comment| %>
-      <div class="row">
-        <hr>
-        <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
-        <p><%= "Rating: #{comment.rating}/5" %></p>
-        <p><%= comment.body %></p>
-      </div>
-  <% end %>
+<% @comments.each do |comment| %>
+    <div class="row">
+      <div class="col-sm-1">
+        <div class="thumbnail">
+          <%=image_tag("man-1.png", height:"30", width:"30")%>
+        </div><!-- /thumbnail -->
+      </div><!-- /col-sm-1 -->
+
+      <div class="col-sm-5">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
+          </div>
+          <div class="panel-body">
+            <div class="rated" data-score="<%= comment.rating %>"></div>
+            <p><%= comment.body %></p>
+          </div><!-- /panel-body -->
+        </div><!-- /panel panel-default -->
+      </div><!-- /col-sm-5 -->
+    </div><!-- /row -->
+<% end %>
 </div>
+
+
