--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -9,11 +9,16 @@
       <div class="col-sm-5">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
+            <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small>
+              <% if signed_in? && current_user.admin? %>
+                <%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
+              <% end %>
+            </p>
           </div>
           <div class="panel-body">
             <div class="rated" data-score="<%= comment.rating %>"></div>
             <p><%= comment.body %></p>
+
           </div><!-- /panel-body -->
         </div><!-- /panel panel-default -->
       </div><!-- /col-sm-5 -->
